--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    background-color: rgb(231, 231, 231);
+    
 
     height: 100vh;
 }
@@ -17,7 +17,7 @@ body {
     flex-direction: column;
     gap: 10px;
 
-    background-color: white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     padding: 50px;
     border-radius: 10px;
     
@@ -55,14 +55,29 @@ body {
 } */
 
 
-.color {
+button {
     padding: 5px;
-    background-color: darkcyan;
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: #6ac5fe;
+    border-width: 0px;
+    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 }
 
 .active-color {
-    background-color: darkslategray;
+    background-color: #3081b4;
 }
 
+
+#grid-settings {
+    display: flex;
+    gap: 10px;
+}
+
+.color {
+    display: flex;
+    gap: 10px;
+}
 
 
