--- a/styles.css
+++ b/styles.css
@@ -62,9 +62,6 @@ body {
     
 }
 
-/*.shade {
-    background-color: green;
-} */
 
 
 button {
@@ -75,14 +72,41 @@ button {
     background-color: #6ac5fe;
     border-width: 0px;
     box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    transition-duration: 0.4s;
 
     font-family: inherit;
 
     color: white;
+
+    position: relative;
+    overflow: hidden;
+}
+
+button:hover {
+    background-color: #3081b4;
+}
+
+
+
+span.ripple {
+  position: absolute;
+  border-radius: 50px;
+  transform: scale(0);
+  animation: ripple 600ms linear;
+  background-color: rgba(255, 255, 255, 0.7);
+
+}
+
+@keyframes ripple {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
 }
 
 .active-color {
     background-color: #3081b4;
+
 }
 
 
